Workflow: Add Update Sample Status Action (#7667)